test/syntax/fail/every_in_combinatorial.sync
let node g x = true

let f =
  (g x) every true
